--- a/docs/releases/release_notes/6.10.md
+++ b/docs/releases/release_notes/6.10.md
@@ -52,6 +52,36 @@ discovery process would get stuck when processing very large routing tables.
 
 ### Technology Tables
 
+### Intent Rules
+
+#### New Rules
+
+- Technology > Management > Banner > Summary: `Device Banner`
+  - Green -- Devices with either a MOTD or Login Banner configured.
+  - Yellow -- Devices with no MOTD and no Login Banners configured.
+- Technology > Management > Banner > Banners: `Banner Text`
+  - Green -- Banner contains message on authorized use, monitoring, and penalties.
+  - Yellow -- Banner does not contains message on authorized use, monitoring, and penalties.
+
+#### Updated Rules
+
+- Technology > Management NTP > Summary: `NTP Synchronized Sources`
+  - Updated descriptions from "reachable" to "synchronized".
+  - Corrected calculations of Success (green) rule causing an internal error.
+- Technology > Management NTP > Sources: 
+  - `NTP Stratum Level`: Updated Error (red) rule from `stratum==16` to `stratum>=16`.
+  - `NTP Time Offset`: 
+    - Corrected calculation of Success (green) to only report if `offest` is not empty.
+    - Corrected calculation of Info (blue) to use correct `offest` column.
+  - `NTP Network Round-Trip Time`: 
+    - Corrected calculation of Success (green) to only report if `delay` is not empty.
+- Technology > Management > SNMP > Communities:
+  - `SNMP Community Name`: Corrected to match name on case insensitive equal.
+- Technology > Environment > Power Supplies:
+  - `Power-Supply State`: 
+    - Updated State so `not present` is informational (blue) rather than error (red). 
+    - Adding `alarm` and `power loss` to the error State 
+
 ### Path Lookup
 
 ### Appliance OS-Level Improvements
