--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -16,36 +16,123 @@ tags: ["draft"]
 
 ## v7.0.0 (UNRELEASED)
 
-### Breaking Changes
+### Post-Upgrade Notices
 
-#### API Endpoint Changes
+If you are using custom Role-Based Access Control (RBAC) to restrict access to certain IP Fabric elements based on role, ensure that users have the appropriate permissions for new tables and capabilities. After the upgrade, please run the script found in the Python SDK: [Managed RBAC Configuration](https://gitlab.com/ip-fabric/integrations/python-ipfabric/-/blob/develop/examples/settings/RBAC/managed_rbac.py) (`managed_rbac.py`).
 
-Several API endpoints have been updated or removed in this major release.
+### New Features
 
-##### Replaced Endpoints
+#### GUI
 
-- `/tables/sdwan/links` has been replaced by `/tables/sdwan/versa/links`
-- `/tables/sdwan/sites` has been replaced by `/tables/sdwan/versa/sites`
-- `/tables/load-balancing/f5-partitions` has been replaced by
-  `/tables/load-balancing/partitions`
-- `/tables/mpls/l2vpn/curcit-cross-connect` has been replaced by
-  `/tables/mpls/l2vpn/circuit-cross-connect`
-- `/tables/cloud/virtual-machines-interfaces` has been replaced by
-  `/tables/cloud/endpoints/virtual-machines-interfaces`
-- `/tables/cloud/virtual-machines` has been replaced by
-  `/tables/cloud/endpoints/virtual-machines`
-- `/tables/management/osver-consistency` has been replaced by:
+- **Early Snapshot-Data Availability** -- The GUI now shows available data (tables and diagrams) for snapshots that are still in progress or in an error state.
+
+  !!! important
+
+      Since this data is displayed while still being processed, it may be incomplete.
+
+- **Shareable Snapshot and Tables** -- Easily share specific snapshots and tables with your team using shareable links in the GUI.
+
+#### Cloud
+
+- **New Cloud Tables** -- New public-cloud tables provide more information for AWS, Azure, and Google Cloud Platform (GCP):
+
+  - **AWS**
+    - `/tables/cloud/vendors/aws/inventory`
+  - **Azure**
+    - `/tables/cloud/vendors/azure/inventory`
+  - **GCP**
+    - `/tables/cloud/vendors/gcp/inventory`
+  - **General Public Cloud Tables**
+    - `/tables/cloud/nodes/inventory`
+    - `/tables/cloud/nodes/tags`
+
+#### SD-WAN
+
+- **New Vendor Added -- Cisco Viptela** -- New tables collect Bi-directional Forwarding Detection (BFD) and control plane connection data.
+
+  - **BFD Sessions Table** -- Contains IP addresses, Site IDs, encapsulation type, source and destination IP addresses and ports, interface information, and uptime status.
+  - **Control Connections Table** -- Contains peer type and protocol, Site ID, peer private/public IP and port, and uptime status.
+  - **BFD Summarization Table** -- Displays the number of total sessions, active sessions, sessions flapping, and the maximum sessions allowed.
+
+- **New Vendor Added -- Silverpeak** -- New tables show overlay and underlay information:
+
+  - **Overlay Table** -- Contains SD-WAN bonded tunnel information with status and uptime.
+  - **Underlay Table** -- Contains IPsec tunnels that map to discrete transports.
+
+- **New Capability Added -- Versa Networks** -- Configuration backup support has been added for devices when network discovery is running in combined/hybrid (CLI+API) mode.
+
+#### Network Discovery
+
+- **New Capabilities -- Check Point** -- The ability to collect Enforcement Point data using a new extended command, allowing access to expert mode when explicitly defined.
+
+- **New Capabilities -- Stormshield:**
+
+  - Support for collecting NAT rules has been added.
+  - Stormshield devices are now discovered automatically by default.
+
+- **Duplicate IP Discovery** -- The ability to discover duplicate IP addresses in the same network can now be allowed explicitly in the GUI.
+
+  !!! important
+
+      If you previously configured `SUBNETS_TO_ALLOW_PROCESSING_DUPLICIT_IP`, you will need to manually set the subnets again in the GUI.
+
+#### Interactive API Documentation
+
+- **Explore and Test Workflows Directly From the API Documentation** -- Interactive API documentation (powered by `RapiDoc`) allows you to see predefined schemas and run CRUD commands directly from your web browser.
+
+#### Dynamic Routing
+
+- **New BGP Table** -- A new table has been added to provide more information about BGP routes:
+  - `/tables/routing/protocols/bgp/routes`
+
+#### Support for Future Functionality
+
+- **Docker Container Support** -- Docker runtime has been added to the appliance for future accelerated extensibility.
+- **New Database Added** -- PostgreSQL 15 has been added to the appliance for future scalability and performance improvements.
+- **Add External Services to Appliance** -- A new script, `/opt/ipf-debian-repositories/bin/ipf-debian-repositories.sh`, can be used to re-enable official Debian repositories.
+
+### Improvements
+
+- **Device-Based Advanced Filters** -- Filter tables based on device properties such as `Vendor`, `Family`, `Model`, and `Version`.
+  - For a full list of properties, see [Technology Tables -- Device-Based Advanced Filters](../../IP_Fabric_GUI/technology_tables/index.md#device-based-advanced-filters).
+- **Site Separation Automatic Site Name Identification** -- Enhanced the option to build advanced Site Name values using RegEx template strings.
+
+- **Format Change for Techsupport Files** -- Techsupport files are now compressed with `zstd` (instead of `gzip`) for improved speed and compression ratio.
+
+- **Unnecessary Tables Have Been Removed:**
+
+  - **Technology --> Interfaces --> Average Rates --> Data**
+  - **Technology --> Interfaces --> Average Rates --> Errors**
+  - **Technology --> Interfaces --> Average Rates --> Drops**
+
+- **Renamed Initial Configuration Command**
+  - This is a reminder that in the previous `6.9.x` release, `nimpee-net-config` was renamed to `ipf-cli-config` to align with the current product name.
+    - This change remains valid for `7.0.x` and newer versions.
+
+### API Changes
+
+- **API Endpoint Changes** -- Several API endpoints have been updated or removed in this major release. This could result in breaking your automation and system workflows. Please consult your Operations or DevOps team to double-check if you use these endpoints.
+
+#### Replaced Endpoints
+
+- `/tables/sdwan/links` --> `/tables/sdwan/versa/links`
+- `/tables/sdwan/sites` --> `/tables/sdwan/versa/sites`
+- `/tables/load-balancing/f5-partitions` --> `/tables/load-balancing/partitions`
+- `/tables/mpls/l2vpn/curcit-cross-connect` --> `/tables/mpls/l2vpn/circuit-cross-connect`
+- `/tables/cloud/virtual-machines-interfaces` --> `/tables/cloud/endpoints/virtual-machines-interfaces`
+- `/tables/cloud/virtual-machines` --> `/tables/cloud/endpoints/virtual-machines`
+
+- `/tables/management/osver-consistency` replaced with the following:
+
   - `/tables/inventory/os-version-consistency/platforms`
   - `/tables/inventory/os-version-consistency/models`
 
-API version is no longer part of the token endpoint, rendering the following
-path inaccessible:
+- The API version is no longer part of the token endpoint, making the following path inaccessible:
 
-- `<API_VERSION>/auth/token` (use `/auth/token` instead)
+  - `<API_VERSION>/auth/token`
+  - Please use `/auth/token` instead.
 
-##### Removed Endpoints
-
-The following endpoints have been permanently removed:
+#### Removed Endpoints
 
 - `/tables/networks/domain`
 - `/tables/spanning-tree/radius`
@@ -53,229 +140,60 @@ The following endpoints have been permanently removed:
 - `/tables/addresing/path-lookup-sources`
 - `/tables/attributes/summary`
 - `/tables/interfaces/transfer-rates/*`
-- `/tables/interfaces/errors/*` except for `/tables/interfaces/errors/disabled`
+- `/tables/interfaces/errors/*`
+  - except `/tables/interfaces/errors/disabled`
 - `/tables/interfaces/drops/*`
 
-##### Replaced Endpoint Properties
+#### Replaced Endpoint Properties
 
-The following column names have been changed:
+- **NTP Synchronization Status** -- Some vendors report reachable status along with synchronization status, leading to incorrectly marking some sources as not reachable.
+  - The following columns have been renamed to more accurately reflect their property:
+    - `/tables/management/ntp/summary`: `reachableSources` --> `synchronizedSources`
+    - `/tables/management/ntp/sources`: `reachable` --> `sync`
 
-- `/tables/management/ntp/summary`: `reachableSources` -> `synchronizedSources`
-- `/tables/management/ntp/sources`: `reachable` -> `sync`
+#### Removed Endpoint Properties
 
-!!! info "NTP Synchronization Status"
+- `/tables/networks/policies/routing/interfaces: status`
+- `/tables/inventory/devices: mac`
 
-    It was determined that some vendors report a reachable status along with a
-    synchronization status causing the data to incorrectly mark some sources as not
-    reachable.  These columns were renamed to more accurately describe their
-    property.
-
-##### Removed Endpoint Properties
-
-The following properties have been removed from tables:
-
-- `/tables/networks/policies/routing/interfaces`: `status`
-- `/tables/inventory/devices`: `mac`
-
-#### New Tables
-
-The following new tables have been added to the product (in addition to the ones
-listed in [Replaced Endpoints](#replaced-endpoints). Please ensure if using
-custom RBAC you review your policies and roles to ensure your users have
-appropriate permissions to view these if allowed.
-
-- `/tables/routing/protocols/bgp/routes`
-- `/tables/cloud/vendors/aws/inventory`
-- `/tables/cloud/vendors/azure/inventory`
-- `/tables/cloud/vendors/gcp/inventory`
-- `/tables/cloud/nodes/inventory`
-- `/tables/cloud/nodes/tags`
-- `/tables/sdwan/silverpeak/overlay`
-- `/tables/sdwan/silverpeak/underlay`
-- `/tables/sdwan/viptela/bfd-sessions`
-- `/tables/sdwan/viptela/bfd-summary`
-- `/tables/sdwan/viptela/control-connections`
-
-!!! note "Solution Architect Managed RBAC"
-
-    The Solution Architect team has published a [managed RBAC
-    configuration](https://gitlab.com/ip-fabric/integrations/python-ipfabric/-/blob/develop/examples/settings/RBAC/managed_rbac.py?ref_type=heads)
-    located in the Python SDK which is updated on every major and minor release.
-    This should be run after every upgrade if you decide to use these policies and
-    roles.
-
-#### Removed tables
-
-The following tables have been removed from the product.
-
-- `Technology - Interfaces - Average Rates - Data`
-- `Technology - Interfaces - Average Rates - Errors`
-- `Technology - Interfaces - Average Rates - Drops`
-
-#### Removed alias `f` in URLs
+#### Removed Alias `f` in URLs
 
 - Support for `f` as an alias for `filters` in table URLs has been dropped.
 
-  - This URL is **no longer** supported:
+  !!! example "Removed URL"
 
-    `https://<IPF_IP_or_FQDN>/inventory/os-versions?options={"f":{"and":[{"version":["eq","15.5(2)T"]},{"platform":["eq","i86bi_linux"]}]}}`
+      `https://<IPF_IP_or_FQDN>/inventory/os-versions?options={"f":{"and":[{"version":["eq","15.5(2)T"]},{"platform":["eq","i86bi_linux"]}]}}`
 
-  - This URL remains supported:
+  !!! example "Still Supported URL"
 
-    `https://<IPF_IP_or_FQDN>/inventory/os-versions?options={"filters":{"and":[{"version":["eq","15.5(2)T"]},{"platform":["eq","i86bi_linux"]}]}}`
+      `https://<IPF_IP_or_FQDN>/inventory/os-versions?options={"filters":{"and":[{"version":["eq","15.5(2)T"]},{"platform":["eq","i86bi_linux"]}]}}`
 
-### Network Discovery
+### Fixes
 
-#### Vendor Support
+- **RP Mappings Groups** -- Ensured the ID of each individual row is unique, resolving a potential issue where Intent Verification rules might have incorrectly highlighted rows in the table for certain datasets.
 
-- Check Point -- Identity awareness collecting was updated with a new extended
-  command. For more details, see [Checkpoint Known
-Issues](../../support/known_issues/Vendors/checkpoint.md).
-- Stormshield
-  - Support for the collection of NAT rules has been added.
-  - Starting from the 7.0 release, Stormshield devices are now discovered
-    automatically, and the feature flag no longer needs to be enabled.
+  !!! important
 
-#### Improvements
+      If Intent Verification rules were configured for this table, you may need to manually unload and reload specific snapshots to ensure proper functionality.
 
-##### Site Separation
+- **NSX-T Rate Limiter** -- Fixed a bug where, in rare cases, NSX-T discovery issues occurred due to the NSX-T server becoming overloaded.
 
-The [Site
-Separation](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/site_separation.md)
-functionality using regular expressions was improved, allowing for the creation
-of advanced **Site Name** values with template strings.
+### Beta Features
 
-##### Duplicate IP Discovery
+If you're interested in trying our new beta features, please contact your Customer Success Manager for assistance with enabling these features.
 
-Duplicate IPs discovery, initially configured using the environment variable
-`SUBNETS_TO_ALLOW_PROCESSING_DUPLICIT_IP` since the `6.4` release, has now been
-promoted to a product feature. This setting can now be configured [directly in the
-GUI](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/discovery/duplicate_ips_discovery.md).
-
-If you previously used the `SUBNETS_TO_ALLOW_PROCESSING_DUPLICIT_IP` feature
-flag, you will need to manually reconfigure the subnets in the GUI.
-
-##### `actrlRule` Endpoint Paging
-
-The Cisco APIC `actrlRule` API endpoint now has a default paging size of 50,000
-records (previously, the lack of a paging limit led to slow or unsuccessful data
-collection). The page size can be adjusted using the `ACI_ACTRLRULE_PAGESIZE`
-configuration flag. Please contact our Support team if you need to lower the
-default paging size.
-
-##### NSX-T Rate Limiter
-
-A bug was discovered in the NSX-T API rate limiter, where in rare cases, it was
-not being enforced. This led to the NSX-T server becoming overloaded, resulting
-in unsuccessful discovery.
-
-The statistical logs for all Vendor APIs have been enhanced to now include the
-number of requests sent per time period.
-
-##### Server Overload Detection
-
-We have upgraded the overload detection mechanisms for all HTTP-based vendor API
-clients. A new feature has been added that prevents additional requests from
-being sent once an `overloaded server` message is received. The system now waits
-for a specified duration, as determined by the controller, before attempting to
-send the next request.
-
-##### Juniper Mist
-
-The Juniper Mist API client now parses and applies a specific wait time from the
-overloaded response received from the controller. This enhancement prevents the
-session from being destroyed if the Juniper Mist default API limit of 5000 calls
-per hour is reached.
-
-### Technology Tables
-
-#### SDWAN
-
-New vendor specific tables were added under **Technology --> SDWAN** menu.
-Support for [Cisco
-Viptela](../../IP_Fabric_GUI/technology_tables/SDWAN/viptela.md) and
-[Silverpeak](../../IP_Fabric_GUI/technology_tables/SDWAN/silverpeak.md) was
-added.
-
-![SDWAN Menu](./7.0/SDWAN_Viptela_SP.png)
-
-#### RP Mappings groups
-
-A potential issue was resolved where intent verification rules might have
-incorrectly highlighted rows in the table for certain data sets in **Technology
---> Multicast --> RP --> RP Mappings groups**. This was addressed by ensuring
-that the ID of each individual row is now truly unique.
-
-**If intent verification rules are already configured for this table**, it may
-be necessary to perform a **snapshot unload and reload** to ensure the existing
-intent rules function properly.
-
-#### Device-based Advanced Filters
-
-In many **Technology** and **Inventory** tables, you can now use advanced
-filters based on device properties like **Vendor**, **Family**, **Model**,
-**Version**. For full properties and tables list refer to [Device-based advanced
-filters](../../IP_Fabric_GUI/technology_tables/index.md#device-based-advanced-filters).
-
-### Frontend
-
-#### Available data for incomplete snapshots
-
-GUI now shows available data (tables, diagrams) for snapshots that are still in
-progress or in error state. Note that those data may be incomplete, and it may
-even take some time for a device to appear in Devices table after it is
-discovered, but still most of the data are usually available much earlier before
-discovery finishes.    
-
-#### Sharable links
-
-- Added support for [URL links that point to a specific
-  snapshot](../../IP_Fabric_GUI/discovery_snapshot.md#create-url-pointing-to-specific-snapshot).
-- Links to tables can now be shared [with a snapshot ID and full filter
-  representation](../../IP_Fabric_GUI/technology_tables/index.md#create-links-to-table-views).
-
-#### Interactive API Documentation
-
-We're excited to introduce an interactive API documentation powered by RapiDoc,
-now available at `https://<host>/api/rapidoc`!
-
-This new feature offers comprehensive documentation for all API endpoints,
-including predefined schemas. It allows you to explore and test the API's
-capabilities directly from your browser. By adding this feature, we aim to
-enhance your development experience and simplify the integration process.
-
-### Configuration Management
-
-#### Versa
-
-Support for configuration backup was added for Versa devices when the
-discovery is running in [Combined (CLI+API) discovery
-mode](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/Versa_Networks_SD-WAN.md).
-
-### Appliance OS-Level Improvements
-
-- Techsupport files are now compressed with `zstd` instead of `gzip` for
-  improved speed and compression ratio.
-- `nimpee-net-config` was renamed to `ipf-cli-config`
-- `ipf-cli-config` removes `proxy.cred` for OpenVPN when setting up anonymous
-  proxy
-- `docker` runtime was added to the appliance.
-- PostgreSQL 15 was added to the appliance.
-- New script in `/opt/ipf-debian-repositories/bin/ipf-debian-repositories.sh`
-  can be [used to re-enable Debian
-repositories](../../System_Administration/Command_Line_Interface/How_to/add_system_repositories.md).
-
-### Other Changes
-
-### Experimental Features
-
-Newly added features that need to be explicitly enabled in service files. If you
-are interested in trying them out, please contact our Support or Solution
-Architect team, and we will gladly help you with enabling these features.
-
-#### VeloCloud
-
-VeloCloud discovery has been enhanced with basic networking support. To
-enable VeloCloud discovery, you must [manually activate the feature
-flag](../../System_Administration/Command_Line_Interface/Feature_Flags.md#velocloud-discovery)
-(`ENABLE_DISCOVERY_DEVICES_VELOCLOUD`).
+- **VeloCloud Discovery Enhancements**
+  - Enhanced VeloCloud discovery with basic networking support, including:
+    - `IPv4`
+    - `IPv6`
+    - `ARP`
+    - `neighborDiscovery`
+    - `fhrp`
+    - `l2Interfaces`
+    - `l3Interfaces`
+    - `MAC`
+    - `neighbors`
+    - `portChannel`
+    - `routingTable`
+    - `stp`
+    - `vlan`
