NIM-16125 Remove feature Flag from GCP and add info to release notes.

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -70,6 +70,11 @@ If you are using custom Role-Based Access Control (RBAC) to restrict access to c
   - Support for collecting NAT rules has been added.
   - Stormshield devices are now discovered automatically by default.
 
+- **New Capabilities -- GoogleCloud Platform:**
+
+  - Support for Load Balancer discovery has been added.
+  - Possibility to [configure GoogleCloud Platform API discovery](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/GCP_Google_Cloud_Platform.md) is now available in the GUI, without need to enable feature flag (`ENABLE_DISCOVERY_DEVICES_GCP`).
+
 - **Duplicate IP Discovery** -- The ability to discover duplicate IP addresses in the same network can now be allowed explicitly in the GUI.
 
   !!! important
