NIM-15813 add opengear to rn and ff docs

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -232,3 +232,11 @@ If you're interested in trying our new beta features, please contact your Custom
     - `routingTable`
     - `stp`
     - `vlan`
+
+- **Opengear Discovery**
+  - Additional Opengear console servers can be discovered:
+    - `ACM700x`
+    - `CM71xx`
+    - `CM81xx`
+    - `OM12xx`
+    - `OM22xx`
