Split removing f alias from API changes

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -161,6 +161,8 @@ If you are using custom Role-Based Access Control (RBAC) to restrict access to c
 - `/tables/networks/policies/routing/interfaces: status`
 - `/tables/inventory/devices: mac`
 
+### Frontend URL changes
+
 #### Removed Alias `f` in URLs
 
 - Support for `f` as an alias for `filters` in table URLs has been dropped.
