NIM-6577 Document removal of devices count from /licenses/validity

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -137,6 +137,12 @@ If you are using custom Role-Based Access Control (RBAC) to restrict access to c
   - `<API_VERSION>/auth/token`
   - Please use `/auth/token` instead.
 
+- `/licenses/validity` was updated as it does not need authentication and previously exposed maximum number of devices,
+  which can be considered sensitive information.
+  
+  - The same information can now be retrieved at `/licenses/info`, which requires authentication.
+  - The `/licenses/validity` endpoint does not contain `devices` field anymore.
+
 #### Removed Endpoints
 
 - `/tables/networks/domain`
