Ressurecting information missing from 7.0 Release Notes

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -30,7 +30,12 @@ If you are using custom Role-Based Access Control (RBAC) to restrict access to c
 
       Since this data is displayed while still being processed, it may be incomplete.
 
-- **Shareable Snapshot and Tables** -- Easily share specific snapshots and tables with your team using shareable links in the GUI.
+- **Shareable Snapshot and Tables** -- Easily share specific [snapshot](../../IP_Fabric_GUI/discovery_snapshot.md#create-url-pointing-to-specific-snapshot), and [tables (including a snapshot ID and full filter representation)](../../IP_Fabric_GUI/technology_tables/index.md#create-links-to-table-views) with your team using shareable links in the GUI.
+
+- Added support for [URL links that point to a specific
+  snapshot](../../IP_Fabric_GUI/discovery_snapshot.md#create-url-pointing-to-specific-snapshot).
+- Links to tables can now be shared [with a snapshot ID and full filter
+  representation](../../IP_Fabric_GUI/technology_tables/index.md#create-links-to-table-views).
 
 #### Cloud
 
@@ -42,48 +47,58 @@ If you are using custom Role-Based Access Control (RBAC) to restrict access to c
     - `/tables/cloud/vendors/azure/inventory`
   - **GCP**
     - `/tables/cloud/vendors/gcp/inventory`
+  - **Silverpeak**
+    - `/tables/sdwan/silverpeak/overlay`
+    - `/tables/sdwan/silverpeak/underlay`
+  - **Viptela**
+    - `/tables/sdwan/viptela/bfd-sessions`
+    - `/tables/sdwan/viptela/bfd-summary`
+    - `/tables/sdwan/viptela/control-connections`
   - **General Public Cloud Tables**
     - `/tables/cloud/nodes/inventory`
     - `/tables/cloud/nodes/tags`
 
 #### SD-WAN
 
-- **New Vendor Added -- Cisco Viptela** -- New tables collect Bi-directional Forwarding Detection (BFD) and control plane connection data.
+- **New Capabilities -- Cisco Viptela** -- New tables collect Bi-directional Forwarding Detection (BFD) and control plane connection data.
 
   - **BFD Sessions Table** -- Contains IP addresses, Site IDs, encapsulation type, source and destination IP addresses and ports, interface information, and uptime status.
   - **Control Connections Table** -- Contains peer type and protocol, Site ID, peer private/public IP and port, and uptime status.
   - **BFD Summarization Table** -- Displays the number of total sessions, active sessions, sessions flapping, and the maximum sessions allowed.
 
-- **New Vendor Added -- Silverpeak** -- New tables show overlay and underlay information:
+- **New Capabilities -- Silverpeak** -- New tables show overlay and underlay information:
 
   - **Overlay Table** -- Contains SD-WAN bonded tunnel information with status and uptime.
   - **Underlay Table** -- Contains IPsec tunnels that map to discrete transports.
 
-- **New Capability Added -- Versa Networks** -- Configuration backup support has been added for devices when network discovery is running in combined/hybrid (CLI+API) mode.
+- **New Capabilities -- Versa Networks** -- Configuration backup support has been added for devices when network discovery is running in combined/hybrid (CLI+API) mode.
 
 #### Network Discovery
 
-- **New Capabilities -- Check Point** -- The ability to collect Enforcement Point data using a new extended command, allowing access to expert mode when explicitly defined.
+- **New Capabilities -- Check Point** -- The ability to collect Enforcement Point data using a new extended command, allowing access to expert mode when explicitly defined. See [Checkpoint Known Issues](../../support/known_issues/Vendors/checkpoint.md#identity-awareness-support).
 
 - **New Capabilities -- Stormshield:**
 
   - Support for collecting NAT rules has been added.
   - Stormshield devices are now discovered automatically by default.
 
-- **New Capabilities -- GoogleCloud Platform:**
+- **New Vendor -- GoogleCloud Platform:**
 
-  - Support for Load Balancer discovery has been added.
   - Possibility to [configure GoogleCloud Platform API discovery](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/GCP_Google_Cloud_Platform.md) is now available in the GUI, without need to enable feature flag (`ENABLE_DISCOVERY_DEVICES_GCP`).
+  - Support for Load Balancer discovery has been added.
 
-- **Duplicate IP Discovery** -- The ability to discover duplicate IP addresses in the same network can now be allowed explicitly in the GUI.
+- **Duplicate IP Discovery** -- The ability to discover duplicate IP addresses in the same network can now be allowed explicitly [in the
+  GUI](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/discovery/duplicate_ips_discovery.md).
 
   !!! important
 
-      If you previously configured `SUBNETS_TO_ALLOW_PROCESSING_DUPLICIT_IP`, you will need to manually set the subnets again in the GUI.
+      If you previously configured `SUBNETS_TO_ALLOW_PROCESSING_DUPLICIT_IP` in the tasker service, you will need to manually set the subnets again in the GUI.
+
+- **Pagination on `actrlRule` API endpoint** -- The Cisco APIC `actrlRule` API endpoint has a default paging size of 50,000 records (previously, the lack of a paging limit led to slow or unsuccessful data collection). The page size can be adjusted using the `ACI_ACTRLRULE_PAGESIZE` configuration flag. Please contact our Support team if you need to lower the default value.
 
 #### Interactive API Documentation
 
-- **Explore and Test Workflows Directly From the API Documentation** -- Interactive API documentation (powered by `RapiDoc`) allows you to see predefined schemas and run CRUD commands directly from your web browser.
+- **Explore and Test Workflows Directly From the API Documentation** -- Interactive API documentation (powered by `RapiDoc`) allows you to see predefined schemas and make requests directly from your web browser. You can find it at `https://<host>/api/rapidoc`.
 
 #### Dynamic Routing
 
@@ -100,7 +115,9 @@ If you are using custom Role-Based Access Control (RBAC) to restrict access to c
 
 - **Device-Based Advanced Filters** -- Filter tables based on device properties such as `Vendor`, `Family`, `Model`, and `Version`.
   - For a full list of properties, see [Technology Tables -- Device-Based Advanced Filters](../../IP_Fabric_GUI/technology_tables/index.md#device-based-advanced-filters).
-- **Site Separation Automatic Site Name Identification** -- Enhanced the option to build advanced Site Name values using RegEx template strings.
+- **Server Overload Detection** -- We've enhanced the overload detection for all HTTP-based vendor API clients. Now, if an overloaded server message is received, the system pauses for a specified duration before retrying.
+- **Site Separation Automatic Site Name Identification** -- Enhanced the option to build advanced Site Name values using RegEx template strings. See [Site
+  Separation](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/site_separation.md).
 
 - **Format Change for Techsupport Files** -- Techsupport files are now compressed with `zstd` (instead of `gzip`) for improved speed and compression ratio.
 
@@ -116,7 +133,7 @@ If you are using custom Role-Based Access Control (RBAC) to restrict access to c
 
 ### API Changes
 
-- **API Endpoint Changes** -- Several API endpoints have been updated or removed in this major release. This could result in breaking your automation and system workflows. Please consult your Operations or DevOps team to double-check if you use these endpoints.
+Several API endpoints have been updated or removed in this major release. This could result in breaking your automation and system workflows. Please consult your Operations or DevOps team to double-check if you use these endpoints.
 
 #### Replaced Endpoints
 
@@ -197,35 +214,37 @@ If you are using custom Role-Based Access Control (RBAC) to restrict access to c
 - **Technology --> Management NTP --> Summary:** `NTP Synchronized Sources`
   - Updated descriptions from "reachable" to "synchronized".
   - Corrected calculations of Success (green) rule causing an internal error.
-- **Technology --> Management NTP --> Sources:** 
+- **Technology --> Management NTP --> Sources:**
   - `NTP Stratum Level`: Updated Error (red) rule from `stratum==16` to `stratum>=16`.
-  - `NTP Time Offset`: 
+  - `NTP Time Offset`:
     - Corrected calculation of Success (green) to only report if `offest` is not empty.
     - Corrected calculation of Info (blue) to use correct `offest` column.
-  - `NTP Network Round-Trip Time`: 
+  - `NTP Network Round-Trip Time`:
     - Corrected calculation of Success (green) to only report if `delay` is not empty.
 - **Technology --> Management --> SNMP --> Communities:**
   - `SNMP Community Name`: Corrected to match name on case insensitive equal.
 - **Technology --> Environment --> Power Supplies:**
-  - `Power-Supply State`: 
-    - Updated State so `not present` is informational (blue) rather than error (red). 
-    - Adding `alarm` and `power loss` to the error State 
+  - `Power-Supply State`:
+    - Updated State so `not present` is informational (blue) rather than error (red).
+    - Adding `alarm` and `power loss` to the error State
 
 ### Fixes
 
-- **RP Mappings Groups** -- Ensured the ID of each individual row is unique, resolving a potential issue where Intent Verification rules might have incorrectly highlighted rows in the table for certain datasets.
+- **RP Mappings Groups** -- Ensured the ID of each individual row is unique, resolving a potential issue where Intent Verification rules might have incorrectly highlighted rows for certain datasets in the **Technology --> Multicast --> RP --> RP Mappings groups** table.
 
   !!! important
 
       If Intent Verification rules were configured for this table, you may need to manually unload and reload specific snapshots to ensure proper functionality.
 
 - **NSX-T Rate Limiter** -- Fixed a bug where, in rare cases, NSX-T discovery issues occurred due to the NSX-T server becoming overloaded.
+- **Juniper Mist API limitations** -- The Juniper Mist API client now uses a specific wait time from the controller's overloaded response, preventing session termination when the default 5000 calls per hour limit is reached.
 
 ### Beta Features
 
 If you're interested in trying our new beta features, please contact your Customer Success Manager for assistance with enabling these features.
 
 - **VeloCloud Discovery Enhancements**
+
   - Enhanced VeloCloud discovery with basic networking support, including:
     - `IPv4`
     - `IPv6`
