NIM-15650 - adding info about bgpAdvertisedRoutes task

--- a/docs/releases/release_notes/7.0.md
+++ b/docs/releases/release_notes/7.0.md
@@ -102,8 +102,14 @@ If you are using custom Role-Based Access Control (RBAC) to restrict access to c
 
 #### Dynamic Routing
 
-- **New BGP Table** -- A new table has been added to provide more information about BGP routes:
-  - `/tables/routing/protocols/bgp/routes`
+- **New BGP Table -- Advertised Routes** -- A new table in **Technology --> Routing --> BGP** has been added to provide more information about BGP routes being advertised to neighbors.
+
+  !!! Important "BGP Advertised Routes task"
+      The data collected for this table can be substantial, so the task **BGP Advertised Routes** is disabled by default.
+
+      This table will only populate if the related collector task is explicitly enabled.
+      
+      To enable it, delete the **BGP Advertised Routes** rule from the list under **Settings --> Discovery & Snapshots --> Discovery Settings --> Disabled Discovery Tasks**.
 
 #### Support for Future Functionality
 
